--- a/perber/views/themes/default/templates/chat_tmpl.jade
+++ b/perber/views/themes/default/templates/chat_tmpl.jade
@@ -47,9 +47,9 @@ script#music_box(type='text/html')
             span.xiami_icon
                 a(href="{{ songOriginal }}", target="_blank") xiami
 
-script#loading(type="text/html")
-   .loading
-       i.fa.fa-spinner.fa-spin
+script#loader(type="text/html")
+   .loader
+       // i.fa.fa-spinner.fa-spin
 
 script#nullbox(type="text/html")
     .nullbox.header.ui.icon
